<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        tools:ignore="ExtraText">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ilvCodigoVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical|start"
                android:text="@string/txt_codigo_venta"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical|start"
                android:text="@string/txt_descripcion"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical|start"
                android:text="@string/txt_precio"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical|start"
                android:text="@string/txt_cantidad"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvFecha"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/card_background"
                android:gravity="center_vertical|start"
                android:text="@string/txt_fecha"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
