<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/ilvFoto"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_background"
            android:src="@drawable/ic_user"
            tools:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ilvCarnet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/card_background"
                android:text="@string/txt_carnet"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/txt_name"
                android:background="@drawable/card_background"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/txt_lastname"
                android:background="@drawable/card_background"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ilvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/card_background"
                android:text="@string/txt_phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
